--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,66 @@
 body {
   margin: 0;
+  font-family: Arial, sans-serif;
+  font-size: 30px;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+$width-cell: 100px;
+$margin: 1px;
+$start-day: "tue", "wed", "thu", "fri", "sat", "sun";
+
+@mixin cell($width-cell, $height-cell) {
+  width: $width-cell;
+  height: $height-cell;
+  background-color: #eee;
+  border: 1px solid #000;
+  margin: 0 0 $margin $margin;
+  position: relative;
+  display: none;
+}
+
+.calendar {
+  display: flex;
+  flex-wrap: wrap;
+  margin: auto;
+  width: $width-cell*7 + $margin*7;
+}
+
+.calendar div::after {
+  display: block;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.calendar > div {
+  @include cell(100px, 100px);
+}
+
+@for $i from 1 through 31 {
+  div:nth-child(#{$i})::after {
+    content: "#{$i}";
+  }
+}
+
+@for $i from 1 through 6 {
+  .calendar-#{nth($start-day, $i)} div:first-child {
+    margin-left: $width-cell*$i + $margin*($i+1);
+  }
+}
+
+@for $i from 28 through 31 {
+  .calendar-#{$i} div:nth-child(-n+#{$i}) {
+    display: block;
+  }
+}
+
+.calendar > div:hover {
+  margin-top: -20px;
+  background-color: pink;
+  transition: all 0.5s linear;
 }
