--- a/src/styles/_calendarAnimation.scss
+++ b/src/styles/_calendarAnimation.scss
@@ -1,7 +1,6 @@
 @import "_variables";
 
 .calendar > div:hover {
-  margin-top: -20px;
-  background-color: pink;
-  transition: all 0.5s linear;
+  transform: translateY(-20px);
+  background-color: $hover-day-background-color;
 }
