--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,6 +1,9 @@
 $width-cell: 100px;
 $margin: 1px;
 $start-day: "tue", "wed", "thu", "fri", "sat", "sun";
-$day-bgc: #eee;
+$color-grey: #eee;
+$color-pink: pink;
+$day-background-color: $grey-color;
+$hover-day-background-color: $pink-color;
 $calendar-font-family: "Arial", sans-serif;
 $calendar-font-size: 30px;
