--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -3,7 +3,7 @@ $margin: 1px;
 $start-day: "tue", "wed", "thu", "fri", "sat", "sun";
 $color-grey: #eee;
 $color-pink: pink;
-$day-background-color: $grey-color;
-$hover-day-background-color: $pink-color;
+$day-background-color: $color-grey;
+$hover-day-background-color: $color-pink;
 $calendar-font-family: "Arial", sans-serif;
 $calendar-font-size: 30px;
